# StockGPT

./: .gitignore  README.md  data_preprocessing.ipynb  gpt1.py  pyproject.toml  setup_env.sh
data/stooq/universe/: universe.txt
data/stooq/us/: A.csv  AA.csv  AACG.csv  AACT-U.csv  AACT-WS.csv  AACT.csv  AADI.csv  AAGR.csv  AAGRW.csv  AAL.csv  AAM-U.csv  AAM-WS.csv  AAM.csv  AAME.csv  AAMI.csv  AAN.csv  AAOI.csv  AAON.csv  AAP.csv  AAPB.csv  AAPD.csv  AAPG.csv  AAPL.csv  AAPU.csv  AAT.csv  AAVM.csv  AB.csv  ABAT.csv  ABBV.csv  ABCB.csv  ABCL.csv  ABCS.csv  ABEO.csv  ABEV.csv  ABFL.csv  ABG.csv  ABHY.csv  ABL.csv  ABLD.csv  ABLG.csv  (+1651 more)
notebooks/: Stooq Download.ipynb  data_preprocessing.ipynb
scheduler/: deploy_flows.sh  prefect_config.toml  scheduler-agent.sh
scheduler/flows/: flow_1.py  flow_2.py  flow_3.py
scheduler/tasks/: task_1.py  task_2.py  task_3.py
src/stockgpt/: gpt1.py  load_stooq.py  regression_test.py
