[project]
name = "stockgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bs4>=0.0.2",
    "numpy<2",
    "pandas>=2.2.3",
    "parmap>=1.7.0",
    "prefect>=3.2.0",
    "seaborn>=0.13.2",
    "torch>=2.2.2",
    "tqdm>=4.67.1",
    "wandb>=0.16.0",
    "scikit-learn",
]
